--- a/Alzound/HTML/Blog.html
+++ b/Alzound/HTML/Blog.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <link href="../CSS/Blog.css" rel="stylesheet" type="text/css"/>
+        <link href="CSS/Blog.css" rel="stylesheet" type="text/css"/>
         <title>Portafolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <source src="Music/En_el_Bosque_Fix.mp3" type="audio/mpeg">
         Your browser does not support the <code>audio</code> tag.
     </audio>
-        <img src="../Images/Alzound2.png" alt="Alzound_Logo" style="width:800px;height:400px;" class = "center"/>
+        <img src="Images/Alzound2.png" alt="Alzound_Logo" style="width:1000px;height:200px;" class = "center"/>
+        <br>
+        
+        <img src="Images/end2.JPG" alt="Alzound_Image" style="width:1000px;height:200px;" class = "center"/>
         <h1 style ="color:whitesmoke; text-align: center">Blog</h1>
         <h3 style ="color:whitesmoke; text-align: center">Aldo Axel Cruz Domínguez</h3>
         <br>
