Regreso a las colisiones

--- a/Alzound/Phaser/index.html
+++ b/Alzound/Phaser/index.html
@@ -156,7 +156,7 @@ class BulletHell extends Phaser.Scene
 
         });
 
-        this.physics.add.collider(attackA, attackB);
+        //this.physics.add.collider(attackA, attackB);
     }
 
     update ()
